Quick fix: Padding pushing text off center on mobile

--- a/src/routes/scss/_section__5.scss
+++ b/src/routes/scss/_section__5.scss
@@ -82,6 +82,7 @@
                 button {
                     border: solid 1px white;
                     color: white;
+                    padding: 0;
                 }
             }
         }
